Fix the wordpress label align in the settings menu

--- a/assets/css/admin-page.css
+++ b/assets/css/admin-page.css
@@ -9,6 +9,11 @@ hr {
     border-bottom: none;
 }
 
+form label[for] {
+    display: block;
+    text-align: justify;
+}
+
 .ltr {
     direction: ltr;
 }
